--- a/网络多线程.md
+++ b/网络多线程.md
@@ -4,7 +4,17 @@
 
 ## 2、GCD
 
-## 3、Operation
+## 3、NSOperation
+ - NSOperation 的核心概念：将“操作”添加到队列
+ - NSOperation 类是一个抽象类
+- 不能直接使用
+- 定义子类共有的属性和方法
+ - NSOperation
+- NSInvocationOperation
+- NSBlockOperation
+ 
+
+
 
 ## 4、SDWebImage
 
