--- a/网络多线程.md
+++ b/网络多线程.md
@@ -5,14 +5,36 @@
 ## 2、GCD
 
 ## 3、NSOperation
- - NSOperation 的核心概念：将“操作”添加到队列
- - NSOperation 类是一个抽象类
-- 不能直接使用
-- 定义子类共有的属性和方法
- - NSOperation
-- NSInvocationOperation
-- NSBlockOperation
+ * NSOperation 的核心概念：将“操作”添加到队列
+ * NSOperation 类是一个抽象类
+* 不能直接使用
+* 定义子类共有的属性和方法
+ * NSOperation
+* NSInvocationOperation
+* NSBlockOperation
+
+ ---
+ GCD & NSOperation 的对比
  
+ GCD 在 iOS 4.0 推出的，主要针对多核处理器做了优化的并发技术，是 C 语言的
+    * 将"任务［block］"添加到"队列 [ 串行/并发/主队列/全局队列 ]"，并且指定执行任务的函数［同步/异步］
+    * 线程间通讯 dispatch_get_main_queue()
+    * 提供了一些 NSOperation 不具备的功能
+        * 一次性执行
+        * 延迟执行
+        * 调度组(在op中也可以做到，就是有点麻烦)
+ 
+ NSOperation 在 iOS 2.0 推出的，苹果推出 GCD 之后，对 NSOperation 底层重写了一遍
+    * 将操作［异步执行的任务］添加到队列[并发队列]，就会立即异步执行
+    * mainQueue
+    * 提供了一些 GCD 实现起来比较困难的功能！
+        * 最大并发操作数
+        * 队列的暂停／继续
+        * 取消所有操作
+        * 指定操作之间的依赖关系 (GCD 用同步实现)
+ 
+ ---
+
 
 
 
