--- a/网络多线程.md
+++ b/网络多线程.md
@@ -5,13 +5,14 @@
 ## 2、GCD
 
 ## 3、NSOperation
- * NSOperation 的核心概念：将“操作”添加到队列
- * NSOperation 类是一个抽象类
-* 不能直接使用
-* 定义子类共有的属性和方法
- * NSOperation
-* NSInvocationOperation
-* NSBlockOperation
+ - NSOperation 是苹果公司大力推荐的"并发"技术！程序员已经不在需要关心线程以及线程的生命周期！  
+ - NSOperation 的核心概念：将“操作”添加到队列
+ - NSOperation 类是一个抽象类
+  - 不能直接使用
+  - 定义子类共有的属性和方法
+ - NSOperation
+  - NSInvocationOperation
+  - NSBlockOperation
 
  ---
  GCD & NSOperation 的对比
