--- a/网络多线程.md
+++ b/网络多线程.md
@@ -12,8 +12,12 @@
   - 定义子类共有的属性和方法
  - NSOperation
   - NSInvocationOperation
-  - NSBlockOperation
+  - NSBlockOperation 所有的代码都写在一起，更加好维护
 
+
+ - NSOperation 本质上是对 GCD 的面相对象的封装
+  - 队列：本质上就是 GCD 的并发队列
+  - 操作：异步执行的任务
  -----
 **GCD & NSOperation 的对比**
  
