--- a/网络多线程.md
+++ b/网络多线程.md
@@ -40,7 +40,23 @@
  
  ------
 
+``` 
+1、NSInvocationOperation
+NSInvocationOperation *op = [[NSInvocationOperation alloc] initWithTarget:self selector:@selector(downloadImage:) object:@"invocation"];
 
+    // start 方法，会在当前线程执行调度方法
+    // [op start];
+    NSOperationQueue *q = [[NSOperationQueue alloc] init];
+    // 将操作添加到队列 － 会自动异步执行调度方法
+    [q addOperation:op];
+    NSOperationQueue *q = [[NSOperationQueue alloc] init];
+    
+2、NSBlockOperation  
+NSBlockOperation *op = [NSBlockOperation blockOperationWithBlock:^{
+            NSLog(@"%@ ---- %d ", [NSThread currentThread], i);
+}];
+[q addOperation:op];
+```
 
 
 ## 4、SDWebImage
